--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
+               <header>
     <div class="header">
         <h1 class="seo">
             <Span>Horiseon</Span>
@@ -29,6 +30,7 @@
         </ul>
     </div>
     </div>
+</header>
     
     <div class="hero"></div>
     <div class="content">
